--- a/Main.tex
+++ b/Main.tex
@@ -9,7 +9,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
 \usepackage{epsfig}
-\usepackage{makeidx}
+\usepackage{imakeidx}
 \usepackage{url}
 \usepackage{fancyhdr}
 \usepackage{multicol}
@@ -182,15 +182,15 @@
 
 \vspace{1in}
 
-{\Large Thomas Scheffler}
+{\Large Michael Penta}
 
-{based on previous work by Allen B. Downey}
+{based on previous work by Allen B. Downey and Thomas Scheffler}
 
 \vspace{1in}
 
-{\Large Version 1.10}
+{\Large Version 1}
 
-{\small June 27th, 2019}
+{\small February 1, 2023}
 \vfill
 
 \end{flushright}
@@ -198,7 +198,8 @@
 
 
 Copyright (C) 1999  Allen B. Downey\\
-Copyright (C) 2009  Thomas Scheffler
+Copyright (C) 2009  Thomas Scheffler\\
+Copyright (C) 2023 Michael Penta\\
 
 \vspace{0.25in}
 
@@ -220,16 +221,17 @@ The \LaTeX\ source and code for this book is available from: \\
 \include{Chapter2}
 \include{Chapter3}
 \include{Chapter4}
-\include{Chapter5}
-\include{Chapter6_Iteration}
-\include{Chapter7_Array}
-\include{Chapter8_String}
-\include{Chapter9_Struct}
+%\include{Chapter5}
+%\include{Chapter6_Iteration}
+%\include{Chapter7_Array}
+%\include{Chapter8_String}
+%\include{Chapter9_Struct}
 
 
 \appendix
 \include{Append1}
 \include{ASCII}
+\include{Formats}
 \printindex
 
 \end{document}
