--- a/exercises/Exercise_2_english.tex
+++ b/exercises/Exercise_2_english.tex
@@ -89,3 +89,12 @@ intermediate or temporary variables.
 
 \end{exercise}
 
+
+\begin{exercise}
+	
+Rewrite the date program so that it asks the user to input numbers for the day, month, and year. 
+Print both date formats as before, but use the user's input		
+		
+
+The point of this exercise is to scan user input and print what was entered.
+\end{exercise}
